--- a/tiger.cabal
+++ b/tiger.cabal
@@ -10,8 +10,8 @@ cabal-version:       >=1.10
                      
 executable Main
   main-is:             Main.hs
-  other-modules:       Lexer
-  build-tools:         alex
+  other-modules:       Lexer,Parser
+  build-tools:         alex,happy
   build-depends:       base,array
   hs-source-dirs:      src
   default-language:    Haskell2010
