Main: Update Main and Cabal file

--- a/tiger.cabal
+++ b/tiger.cabal
@@ -10,9 +10,9 @@ cabal-version:       >=1.10
                      
 executable Main
   main-is:             Main.hs
-  other-modules:       Lexer,Parser
+  other-modules:       Lexer,Parser,CodeGen,IR
   build-tools:         alex,happy
-  build-depends:       base,array
+  build-depends:       base,array,containers,mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
 
